BR-TR-08 combined cost limit and fix FE UI
